Associate dogs with owners
Adds a one-to-many relationship between owners and dogs. This also adds
new seed data for users (owners) and updates the routes.

It doesn't change the scoping of the user_dogs_path so that currently
GET user_dogs will return the same results as GET dogs (and not just the
dogs belonging to that user).

Signed-off-by: isabeldepapel <isuchanek@gmail.com>

--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -1,4 +1,12 @@
-<%= simple_form_for @dog do |f| %>
+<%
+  if params[:action] == "new"
+    url = user_dogs_path(current_user.id)
+  else
+    url = dog_path
+  end
+%>
+
+<%= simple_form_for @dog, url: url do |f| %>
   <%= f.input :name %>
   <%= f.input :description, as: :text %>
   <%= f.input :image, as: :file %>
