--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <h1><%= link_to 'Dog Profile Demo', root_path %></h1>
         <div class="actions">
           <% if current_user %>
-            <%= link_to 'Add your dog', new_dog_path %>
+            <%= link_to 'Add your dog', new_user_dog_path(current_user.id) %>
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
           <% else %>
             <%= link_to 'Sign in', new_user_session_path %>
